Fixing layout issue on Sponsors node detail page.

--- a/docroot/sites/default/themes/nj2016/sass/partials/module/_images.scss
+++ b/docroot/sites/default/themes/nj2016/sass/partials/module/_images.scss
@@ -15,12 +15,14 @@
 }
 
 .view-news {
-    .views-field-field-image {
-      @extend %left;
-    }
+  .views-field-field-image {
+    @extend %left;
+  }
 }
 
-.field-name-field-image {
-  @extend %left;
+.node-article {
+  .field-name-field-image {
+    @extend %left;
+  }
 }
 
